--- a/src/main/resources/templates/view-article-creer.html
+++ b/src/main/resources/templates/view-article-creer.html
@@ -14,84 +14,7 @@
 </head>
 <body>
 	<main class="center-main">
-	 	
-	    <div class="container">
-	    <h2>Nouvelle vente</h2>
-	        <form data-th-action="@{/articles/creer}" method="POST" data-th-object="${article}">
-		        <div class="form-groups">
-		        	<div class="form-group">
-			            <div class="form-group-label">
-			                <label for="article">Article (*) :</label>
-			                <input type="text" id="article" name="article" data-th-field="*{nom}" >
-			                <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('nom')}"></div>
-							</th:block>	
-			            </div>
-			
-			            <div class="form-group-label">
-			                <label for="categorie">Catégorie (*) :</label>
-			                <select id="categorie" name="categorie" data-th-field="*{categorie}" required>
-								<option data-th-each="categorie : ${CategoriesEnSession}"
-									        data-th-text="${categorie.libelle}"
-									        data-th-value="${categorie.id}">
-									</option>
-							</select>
-							<th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('categorie')}"></div>
-							</th:block>	
-			            </div>
-			
-			            <div class="form-group-label">
-			                <label for="description">Description (*) :</label>
-			                <textarea id="description" name="description" data-th-field="*{description}" required></textarea>
-			                <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('description')}"></div>
-							</th:block>	
-			            </div>
-			            
-			            <div class="form-group-label">
-			                <label for="retrait">Retrait (*) :</label>
-			                <select id="retrait" name="retrait" class="retrait" data-th-field="*{adresse}" required>
-			                	<option data-th-each="adresse : ${AdresseEnSession}" data-th-text="${adresse.rue}" data-th-value="${adresse.noAdresse}">
-			                	</option>
-			                </select>
-			                <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('adresse')}"></div>
-							</th:block>	
-			            </div>
-		           	</div>
-		           	<div class="form-group">
-			            <div class="form-group-label">
-			                <label for="prix">Mise à prix (*) :</label>
-			                <input type="number" id="prix" name="prix" min=1 data-th-field="*{prixInitial}" required>
-			                <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('prixInitial')}"></div>
-							</th:block>	
-			            </div>
-			
-			            <div class="form-group-label">
-			                <label for="debut">Début de l'enchère (*) :</label>
-			                <input type="date" id="debut" name="debut" data-th-min="*{dateDebutEncheres}" data-th-field="*{dateDebutEncheres}"  required>
-			                <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('dateDebutEncheres')}"></div>
-							</th:block>	
-			            </div>
-			
-			            <div class="form-group-label">
-			                <label for="fin">Fin de l'enchère (*) :</label>
-			                <input type="date" id="fin" name="fin" data-th-field="*{dateFinEncheres}" required>
-			            </div>
-			            <th:block data-th-if="${!#strings.isEmpty('/articles/creer')}">
-							<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('dateFinEncheres')}"></div>
-						</th:block>	
-		            </div>
-				</div>
-		            <div class="button-group">
-		                <button type="submit" class="btn primary">Suivant</button>
-		                <button type="reset" class="btn danger">Annuler la vente</button>
-		                <a data-th-href="@{/articles}" class="btn danger">Annuler</a>
-		            </div>
-	        </form>
+	        <div data-th-replace="~{fragments/fragment-article-form:: frag-article-form('/articles/creer')}">
 	    </div>
 	</main>
 </body>
