--- a/src/main/resources/templates/fragments/fragment-article-form.html
+++ b/src/main/resources/templates/fragments/fragment-article-form.html
@@ -8,7 +8,7 @@
 			                <label for="article">Article (*) :</label>
 							    
 			                
-			                <input type="text" id="article" name="article" data-th-field="*{nom}" data-th-readonly="${#strings.contains(action,'modifier')}">
+			                <input type="text" id="article" name="article" data-th-field="*{nom}">
 			                <th:block data-th-if="${!#strings.isEmpty(action)}">
 								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('nom')}"></div>
 							</th:block>	
@@ -16,18 +16,11 @@
 			
 			            <div class="form-group-label">
 			                <label for="categorie">Catégorie (*) :</label>
-			                <select id="categorie" name="categorie" data-th-field="*{categorie}" required data-th-disabled="${#strings.contains(action,'modifier')}">
-			                <th:block data-th-if="${#strings.contains(action,'creer')}">
+			                <select id="categorie" name="categorie" data-th-field="*{categorie}">
 				                	<option data-th-each="categorie : ${CategoriesEnSession}"
 									        data-th-text="${categorie.libelle}"
 									        data-th-value="${categorie.id}">
 									</option>
-			                	</th:block>
-			                	<th:block data-th-if="${#strings.contains(action,'modifier')}">
-			                		<option data-th-text="*{categorie.libelle}" data-th-value="${article.categorie.id}">
-				                	</option>
-			                	</th:block>
-								
 							</select>
 							<th:block data-th-if="${!#strings.isEmpty(action)}">
 								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('categorie')}"></div>
@@ -36,23 +29,16 @@
 			
 			            <div class="form-group-label">
 			                <label for="description">Description (*) :</label>
-			                <textarea id="description" name="description" data-th-field="*{description}" required data-th-readonly="${#strings.contains(action,'modifier')}"></textarea>
+			                <textarea id="description" name="description" data-th-field="*{description}" required></textarea>
 			                <th:block data-th-if="${!#strings.isEmpty(action)}">
 								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('description')}"></div>
 							</th:block>	
 			            </div>
 			            <div class="form-group-label">
 			                <label for="retrait">Retrait (*) :</label>
-			                <select id="retrait" name="retrait" class="retrait" data-th-field="*{adresse}" required data-th-disabled="${#strings.contains(action,'modifier')}">
-			                	<!-- data-th-disabled="${#strings.contains(action,'modifier')}"  -->
-			                	<th:block data-th-if="${#strings.contains(action,'creer')}">
+			                <select id="retrait" name="retrait" class="retrait" data-th-field="*{adresse}">
 				                	<option data-th-each="adresse : ${AdresseEnSession}" data-th-text="${adresse.rue}" data-th-value="${adresse.noAdresse}">
 				                	</option>
-			                	</th:block>
-			                	<th:block data-th-if="${#strings.contains(action,'modifier')}">
-			                		<option data-th-text="*{adresse.rue}" data-th-value="${article.adresse.noAdresse}">
-				                	</option>
-			                	</th:block>
 			                </select>
 			                <th:block data-th-if="${!#strings.isEmpty(action)}">
 								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('adresse')}"></div>
@@ -62,7 +48,7 @@
 		           	<div class="form-group">
 			            <div class="form-group-label">
 			                <label for="prix">Mise à prix (*) :</label>
-			                <input type="number" id="prix" name="prix" min=1 data-th-field="*{prixInitial}" required data-th-readonly="${#strings.contains(action,'modifier')}">
+			                <input type="number" id="prix" name="prix" min=1 data-th-field="*{prixInitial}" required>
 			                <th:block data-th-if="${!#strings.isEmpty(action)}">
 								<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('prixInitial')}"></div>
 							</th:block>	
@@ -87,11 +73,16 @@
 				</div>
 		            <div class="button-group">
 			            <button type="submit" class="btn primary">Suivant</button>
-			            <th:block data-th-if="${#strings.contains(action,'modifier')}">
-			            	<button type="submit" class="btn primary">Annuler Vente</button>
-			            </th:block>
 		                <a data-th-href="@{/articles}" class="btn danger">Annuler</a>
 		            </div>
 	        </form>
+	        <th:block data-th-if="${#strings.contains(action,'modifier')}">
+		        <form data-th-action="@{/articles/supprimer}" method="post" data-th-object="${article}">
+		        	<input type="hidden" name="id" data-th-value="*{id}" />
+		        	<div class="button-group">
+				    	<button type="submit" class="btn btn-danger">Annuler Vente</button>
+				    </div>
+				</form>
+			</th:block>
 		</div>
 	        
