--- a/src/main/resources/templates/view-articles.html
+++ b/src/main/resources/templates/view-articles.html
@@ -7,7 +7,6 @@
 					)}">
 
 <head>
-<!-- Accueil comme titre de page -->
 <title>Liste des enchères</title>
 
 <th:block id="ressources-css">
@@ -19,48 +18,47 @@
 	<main>
 		<section class="entete-encheres">
 			<h3 style="text-align: center;">Liste des enchères</h3>
-			<div class="container">
-				<div class="filtres">
-					<label>Filtres :</label> <input type="text" class="input-text"
-						placeholder="Le nom de l'article contient"> <label
-						for="category">Catégorie :</label> <select id="category"
-						class="select-box" onchange="filtrerParCategorie()">
-						<option>Toutes</option>
-						<option data-th-each="categorie : ${CategoriesEnSession}"
+				<form class="container" action="/articles/filtrer" method="GET">
+					<div class="filtres">
+						<label>Filtres :</label> 
+						<input type="text" id="nomArticle" name="nomArticle" class="input-text" placeholder="Le nom de l'article contient"> 
+						<label for="category">Catégorie :</label> 
+						<select id="idCategorie" name="idCategorie" class="select-box" >
+							<option value=0>Toutes</option>
+							<option data-th-each="categorie : ${CategoriesEnSession}"
 								data-th-text="${categorie.libelle}"
-						        data-th-value="${categorie.id}">
-						</option>
-					</select>
-					<th:block
-						data-th-if="${#authorization.expression('isAuthenticated()')}">
-						<div class="filtres-radios">
-							<div class="filtres-radio">
-								<input type="radio" id="achats" name="type" checked> <label
-									for="achats">Achats</label>
+								data-th-value="${categorie.id}"></option>
+						</select>
+						<th:block
+							data-th-if="${#authorization.expression('isAuthenticated()')}">
+							<div class="filtres-radios">
+								<div class="filtres-radio">
+									<input type="radio" id="achats" name="type" checked> 
+									<label for="achats">Achats</label>
+								</div>
+								<select class="select-box" id="list-filtre-achats" name="typeAchat">
+									<option value="ouvert">Enchères ouvertes</option>
+									<option value="enCours">Mes enchères en cours</option>
+									<option value="remportees">Mes enchères remportées</option>
+								</select>
+								<div class="filtres-radio">
+									<input type="radio" id="ventes" name="type"> <label
+										for="ventes">Mes ventes</label>
+								</div>
+								<select class="filtres-select" id="list-filtre-ventes" name="idVente" disabled>
+									<option value="0">Mes ventes non débutées</option>
+									<option value="1">Mes ventes en cours</option>
+									<option value="2">Mes ventes terminées</option>
+								</select>
 							</div>
-							<select class="select-box" id="list-filtre-achats">
-								<option>Enchères ouvertes</option>
-								<option>Mes enchères en cours</option>
-								<option>Mes enchères remportées</option>
-							</select>
-							<div class="filtres-radio">
-								<input type="radio" id="ventes" name="type"> <label
-									for="ventes">Mes ventes</label>
-							</div>
-							<select class="filtres-select" id="list-filtre-ventes" disabled>
-								<option>Mes ventes en cours</option>
-								<option>Mes ventes non débutées</option>
-								<option>Mes ventes terminées</option>
-							</select>
-						</div>
-					</th:block>
-				</div>
-
-				<div class="btn-filtres">
-					<button class="btn">Rechercher</button>
-					<button class="btn">Annuler</button>
-				</div>
-			</div>
+						</th:block>
+					</div>
+	
+					<div class="btn-filtres">
+						<button type="submit" class="btn" >Rechercher</button>
+						<a class="btn" href="/articles">Annuler</a>
+					</div>
+				</form>
 		</section>
 		<section class="cards">
 			<div class="card mb-8" style="max-width: 540px;"
@@ -88,8 +86,9 @@
 								<p class="card-text" data-th-text="${article.dateFinEncheres}">Fin
 									de l'enchère</p>
 								<p class="card-text" data-th-text="${article.vendeur.pseudo}">Vendeur</p>
-								<a data-th-if="${membreEnSession.pseudo == article.vendeur.pseudo}" data-th-href="@{/articles/modifier(idArticle=${article.id})}">Supprimer</a>
-
+								<a data-th-if="${membreEnSession.pseudo == article.vendeur.pseudo 
+								    			and article.dateDebutEncheres.isAfter(T(java.time.LocalDate).now())}"
+									data-th-href="@{/articles/modifier(idArticle=${article.id})}">Modifier</a>
 							</div>
 						</div>
 					</div>
