--- a/src/main/resources/templates/fragments/errors/fragment-error.html
+++ b/src/main/resources/templates/fragments/errors/fragment-error.html
@@ -1,7 +1,7 @@
 <!-- Affichage de la liste des messages d'erreur liée au champ courant -->
 <ul xmlns:th="http://www.thymeleaf.org"
-	data-th-fragment="frag-error(inputName)" class="cards"
+	data-th-fragment="frag-error(inputName)" class="cards alert alert-danger"
 	data-th-if="${#fields.hasErrors(inputName)}">
 	<li data-th-each="err: ${#fields.errors(inputName)}"
-		data-th-text="${err}"></li>
+		data-th-text="'- ' + '__${err}__'" class="fs-6"></li>
 </ul>
