--- a/src/main/resources/templates/fragments/errors/fragment-errors.html
+++ b/src/main/resources/templates/fragments/errors/fragment-errors.html
@@ -1,6 +1,6 @@
 <!-- Affichage d'un message global s'il y a des erreurs -->
 <div xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-errors"
 	class="cards" th:if="${#fields.hasErrors('*')}">
-	<h2>Veuillez vérifier vos champs</h2>
+	<h2 class="alert alert-danger" data-th-text="#{validation.errors.title}"></h2>
 	<p data-th-each="err : ${#fields.errors('global')}" data-th-text="#{${err}}" />
 </div>
