--- a/src/main/resources/templates/view-articles.html
+++ b/src/main/resources/templates/view-articles.html
@@ -17,12 +17,12 @@
 <body>
 	<main>
 		<section class="entete-encheres">
-			<h3 style="text-align: center;">Liste des enchères</h3>
+			<h3 style="text-align: center;" data-th-text="#{articles.titre}">Liste des enchères</h3>
 				<form class="container" action="/articles/filtrer" method="GET">
 					<div class="filtres">
-						<label>Filtres :</label> 
-						<input type="text" id="nomArticle" name="nomArticle" class="input-text" placeholder="Le nom de l'article contient"> 
-						<label for="category">Catégorie :</label> 
+						<label data-th-text="#{articles.filtre}">Filtres :</label> 
+						<input type="text" id="nomArticle" name="nomArticle" class="input-text" data-th-placeholder="#{articles.filtre.input}"> 
+						<label for="category" data-th-text="#{articles.categorie}">Catégorie :</label> 
 						<select id="idCategorie" name="idCategorie" class="select-box" >
 							<option value=0>Toutes</option>
 							<option data-th-each="categorie : ${CategoriesEnSession}"
@@ -34,29 +34,29 @@
 							<div class="filtres-radios">
 								<div class="filtres-radio">
 									<input type="radio" id="achats" name="type" checked> 
-									<label for="achats">Achats</label>
+									<label for="achats" data-th-text="#{articles.achats}">Achats</label>
 								</div>
 								<select class="select-box" id="list-filtre-achats" name="typeAchat">
-									<option value="ouvert">Enchères ouvertes</option>
-									<option value="enCours">Mes enchères en cours</option>
-									<option value="remportees">Mes enchères remportées</option>
+									<option value="ouvert" data-th-text="#{articles.achat1}">Enchères ouvertes</option>
+									<option value="enCours" data-th-text="#{articles.achat2}">Mes enchères en cours</option>
+									<option value="remportees" data-th-text="#{articles.achat3}">Mes enchères remportées</option>
 								</select>
 								<div class="filtres-radio">
 									<input type="radio" id="ventes" name="type"> <label
-										for="ventes">Mes ventes</label>
+										for="ventes" data-th-text="#{articles.ventes}">Mes ventes</label>
 								</div>
 								<select class="filtres-select" id="list-filtre-ventes" name="idVente" disabled>
-									<option value="0">Mes ventes non débutées</option>
-									<option value="1">Mes ventes en cours</option>
-									<option value="2">Mes ventes terminées</option>
+									<option value="0" data-th-text="#{articles.vente1}">Mes ventes non débutées</option>
+									<option value="1" data-th-text="#{articles.vente2}">Mes ventes en cours</option>
+									<option value="2" data-th-text="#{articles.vente3}">Mes ventes terminées</option>
 								</select>
 							</div>
 						</th:block>
 					</div>
 	
 					<div class="btn-filtres">
-						<button type="submit" class="btn" >Rechercher</button>
-						<a class="btn" href="/articles">Annuler</a>
+						<button type="submit" class="btn" data-th-text="#{articles.rechercher}">Rechercher</button>
+						<a class="btn" href="/articles" data-th-text="#{articles.annuler}">Annuler</a>
 					</div>
 				</form>
 		</section>
@@ -68,7 +68,7 @@
 					<div class="row g-0">
 						<div class="col-md-4">
 							<img src="" class="img-fluid rounded-start"
-								alt="Image de l'article">
+								th:alt="#{articles.image.text}">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
