--- a/src/main/resources/templates/fragments/fragment-password.html
+++ b/src/main/resources/templates/fragments/fragment-password.html
@@ -1,13 +1,23 @@
-<div xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-password" class="col-12 row">
+<div xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-password(action)" class="col-12 row mx-0 px-0">
+	
+	<th:block data-th-if="${action=='modifier'}">
+		<div class="col-3 d-none d-md-block py-2">
+			<label for="inputMotDePasse" data-th-text="#{Password.oldMdp.req}" class="w-100 text-center col-form-label"></label>
+		</div>
+		<div class="col-12 col-md-3 py-2">
+			<input type="password" id="inputOldMotdDePasse" required class="form-control" data-th-field="${oldMotDePasse}" data-th-placeholder="#{Password.oldMdp.req}" />
+			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('oldMotDePasse')}"></div>
+		</div>	
+	</th:block>
 	<div class="col-3 d-none d-md-block py-2">
-		<label for="inputMotDePasse" data-th-text="#{Profil.motDePasse.req}" class="w-100 text-center col-form-label"></label>
-	</div>
-	<div class="col-12 col-md-3 py-2">
-		<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}"
-			data-th-readonly="${#strings.contains(action,'modifier')}" class="form-control"
-			data-th-placeholder="#{Profil.motDePasse.req}" />
-		<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>
-	</div>
+			<label for="inputMotDePasse" data-th-text="#{${action=='modifier'}?'Password.newMdp.req':'Profil.motDePasse.req'}" class="w-100 text-center col-form-label"></label>
+		</div>
+		<div class="col-12 col-md-3 py-2">
+			<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}"
+				data-th-readonly="${#strings.contains(action,'modifier')}" class="form-control"
+				data-th-placeholder="#{${action=='modifier'}?'Password.newMdp.req':'Profil.motDePasse.req'}" />
+			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>
+		</div>
 	<div class="col-3 d-none d-md-block py-2">
 		<label for="inputConfirmation" data-th-text="#{Profil.confirmation}" class="w-100 text-center col-form-label"></label>
 	</div>
