feat : utilisateur mise a jour mot de passe

--- a/src/main/resources/templates/fragments/fragment-password.html
+++ b/src/main/resources/templates/fragments/fragment-password.html
@@ -1,27 +1,25 @@
-<div xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-password(action)" class="col-12 row mx-0 px-0">
+<div xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-password(action)" class="col-12 row px-0">
 	
-	<th:block data-th-if="${action=='modifier'}">
-		<div class="col-3 d-none d-md-block py-2">
+	<th:block data-th-if="${#strings.contains(action,'modifier')}">
+		<div class="col-3 d-none d-md-block pt-2 pb-5">
 			<label for="inputMotDePasse" data-th-text="#{Password.oldMdp.req}" class="w-100 text-center col-form-label"></label>
 		</div>
-		<div class="col-12 col-md-3 py-2">
-			<input type="password" id="inputOldMotdDePasse" required class="form-control" data-th-field="${oldMotDePasse}" data-th-placeholder="#{Password.oldMdp.req}" />
-			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('oldMotDePasse')}"></div>
+		<div class="col-12 col-md-9 py-2">
+			<input type="password" id="inputOldMotdDePasse" required class="form-control" name="oldMotDePasse" data-th-placeholder="#{Password.oldMdp.req}" />
 		</div>	
 	</th:block>
 	<div class="col-3 d-none d-md-block py-2">
-			<label for="inputMotDePasse" data-th-text="#{${action=='modifier'}?'Password.newMdp.req':'Profil.motDePasse.req'}" class="w-100 text-center col-form-label"></label>
-		</div>
-		<div class="col-12 col-md-3 py-2">
-			<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}"
-				data-th-readonly="${#strings.contains(action,'modifier')}" class="form-control"
-				data-th-placeholder="#{${action=='modifier'}?'Password.newMdp.req':'Profil.motDePasse.req'}" />
-			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>
-		</div>
+		<label for="inputMotDePasse" data-th-text="#{${#strings.contains(action,'modifier')}?'Password.newMdp.req':'Profil.motDePasse.req'}" class="w-100 text-center col-form-label"></label>
+	</div>
+	<div th:class="'col-12 py-2 '+${#strings.contains(action,'creer')? 'col-md-3' : 'col-md-9'}">
+		<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}" class="form-control"
+			data-th-placeholder="#{${#strings.contains(action,'modifier')}?'Password.newMdp.req':'Profil.motDePasse.req'}" />
+		<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>
+	</div>
 	<div class="col-3 d-none d-md-block py-2">
 		<label for="inputConfirmation" data-th-text="#{Profil.confirmation}" class="w-100 text-center col-form-label"></label>
 	</div>
-	<div class="col-12 col-md-3 py-2">
+	<div th:class="'col-12 py-2 '+${#strings.contains(action,'creer') ? 'col-md-3' : 'col-md-9'}">
 		<input type="password" id="inputConfirmation" required class="form-control"
 			data-th-placeholder="#{Profil.confirmation}" />
 		<div id="confirmationMdpErreur" class="d-none">
