--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -10,20 +10,23 @@ li {
 
 @media screen and (min-width: 768px) {
     /* For mobile display placeholder rather than label */
-    #profil-form ::-webkit-input-placeholder { /* WebKit browsers */
+    #profil-form ::-webkit-input-placeholder, #password-form ::-webkit-input-placeholder { /* WebKit browsers */
         color: transparent;
     }
-    #profil-form ::-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    #profil-form ::-moz-placeholder, #password-form ::-moz-placeholder { /* Mozilla Firefox 4 to 18 */
        color: transparent;
     }
-    #profil-form :-moz-placeholder { /* Mozilla Firefox 19+ */
+    #profil-form :-moz-placeholder, #password-form :-moz-placeholder { /* Mozilla Firefox 19+ */
        color: transparent;
     }
-   	#profil-form :-ms-input-placeholder { /* Internet Explorer 10+ */
+   	#profil-form :-ms-input-placeholder, #password-form :-ms-input-placeholder { /* Internet Explorer 10+ */
        color: transparent;
     }
+    
+    
+    
 }
 
 div {
-	border : 1px solid black;
+	/*border : 1px solid black;*/
 }
