--- a/src/main/resources/templates/view-password-modifier.html
+++ b/src/main/resources/templates/view-password-modifier.html
@@ -15,19 +15,18 @@
 </th:block>
 </head>
 <body>
-	<main>
-		<form data-th-action="/profil/modifier/password" method="post" class="password-form"
-		id="password-form">
+	<main class="w-100">
+		<form data-th-action="@{/profil/modifier/password}" method="post" class="password-form w-75 mx-auto row"
+		id="password-form" data-th-object="${personne}">
 	
 			<h1 class="text-center" data-th-text="#{Password.titreForm.modifier}"></h1>
-			<div data-th-replace="~{fragments/errors/fragment-errors :: frag-errors}"></div>
-		
+			
 			<div data-th-replace="~{fragments/fragment-password :: frag-password('modifier')}"></div>
 			
-			<div class="col-12 col-md-5 py-2 text-end">
+			<div class="col-12 col-md-5 py-2 text-center">
 				<button id="bouton-soumettre" class="btn btn-primary" type="submit" data-th-text="#{Profil.btn.modifier}"></button>
 			</div>
-			<div class="col-md-5 d-none d-md-block py-2 text-start">
+			<div class="col-md-5 d-none d-md-block py-2 text-center">
 				<button class="btn btn-secondary" type="submit" data-th-text="#{Profil.btn.annuler}"></button>
 			</div>
 		</form>
