--- a/src/main/resources/static/css/encheres.css
+++ b/src/main/resources/static/css/encheres.css
@@ -70,13 +70,18 @@
 .cards {
 	width: 100%;
 	display: flex;
+	justify-content: space-evenly;
 	flex-direction: row;
 	flex-wrap: wrap;
+	gap:20px;
+	
 }
 
 .card {
 	width: 30%;
-	margin: 10px;
+	margin-bottom:20px;
+	box-shadow: rgb(110, 127, 146, 0.4) 0px 3px 8px;
+	border:none;
 }
 
 .container-info {
